# image-io

./: .clang-format  .clang-tidy  .cmake-format  .flake8  .gitattributes  .gitignore  .style.yapf  CMakeLists.txt  LICENSE.md  MANIFEST.in  README.md  example.py  pyproject.toml  pytest.ini  setup.py
.github/workflows/: build_and_deploy_wheel.yml  checkcommit.yml  linux.yml  macos.yml  macos_wheel.yml  main.yml  schedule.yml  wheels.yml  windows.yml  windows_wheels.yml
binding/: BindingEntryPoint.cpp  CMakeLists.txt  ExifMetadata.cpp  Image.cpp  ImageIO.cpp  ImageMetadata.cpp  Matrix.cpp  MetadataParser.cpp
binding/cxx_image/: BindingEntryPoint.cpp  CMakeLists.txt  ExifMetadata.cpp  Image.cpp  ImageIO.cpp  ImageMetadata.cpp  Matrix.cpp  MetadataParser.cpp
binding/cxx_libraw/: BindingEntryPoint.cpp  CMakeLists.txt  Metadata.cpp  RawTypes.cpp  libraw_types.cpp
cmake/modules/: FindDeflate.cmake  FindJBIG.cmake  FindLERC.cmake  FindLZMA.cmake  FindWebP.cmake  FindZSTD.cmake
cxx_image_io/: __init__.py  io.py  utils.py
cxx_image_io/binding/: BindingEntryPoint.cpp  CMakeLists.txt  Image.cpp  ImageIO.cpp  ImageMetadata.cpp  Matrix.cpp
cxx_image_io/reader/: base_reader.py  cxx_image_reader.py  cxx_libraw_reader.py  factory.py
cxx_image_io/utils/: channels.py  io_cxx_image.py  io_cxx_libraw.py
image_io/: __init__.py  io.py
image_io/binding/: BindingEntryPoint.cpp  CMakeLists.txt  Image.cpp  ImageIO.cpp  ImageMetadata.cpp  Matrix.cpp  MetadataParser.cpp  image_io_binding.cpp
test/: README.md  __init__.py  conftest.py  data_cases.py  helpers.py  pytest.ini  test_exif.py  test_image_io.py  test_metdata.py  test_utils.py
test/benchmark/: __init__.py  baseline.json  conftest.py  test_cxxio_read.py  test_rawpy_read.py
test/exif/: dwsample-tiff-1280.tif
test/images/: .gitattributes  RAW_KODAK_DC120.KDC  RAW_LEICA_DLUX3.RAW  RAW_OLYMPUS_E3.ORF  RAW_PANASONIC_LX3.RW2  RAW_PENTAX_KX.PEF  RAW_SAMSUNG_NX300M.SRW  RAW_SONY_RX100.ARW  bayer_10bit.RAWMIPI  bayer_10bit.json  bayer_12bit.RAWMIPI12  bayer_12bit.json  bayer_12bits.dng  bayer_16bit.cfa  bayer_16bit.json  bayer_16bit.plain16  bayer_16bit.tif  plain_raw_16bit.json  raw.json  raw.nv12  raw_10bit.json  raw_12bit.json  raw_420.json  raw_420.yuv  rgb_8bit.tif
test/npy/: RAW_CANON_EOS_1DX.npy  RAW_NIKON_D3X.npy  RAW_PANASONIC_LX3.npy  RAW_SONY_RX100.npy  bayer_10bit_rawmipi.npy  bayer_12bit_rawmipi.npy  bayer_12bits_dng.npy  bayer_16bit_plain.npy  bayer_16bit_tif.npy  raw_420_yuv.npy  raw_nv12.npy  ref_rgb_8bit_bmp.npy  ref_rgb_8bit_tif.npy  rgb_8bit_bmp.npy  rgb_8bit_jpg.npy  rgb_8bit_png.npy
test/nrt/: conftest.py  data_cases.py  helpers.py  test_exif.py  test_image_io.py  test_metdata.py  test_utils.py
test/ref/: rgb_8bit.tif
test/unit_test/: test_channels.py  test_libraw.py  test_matrix.py  test_preload.py  test_readers.py
