[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cxx-image-io"
version = "1.1.1"
dependencies = [
  "numpy>=2.0.2"
]
authors = [{name = "Yuan SUN", email = "sunyuan860510@gmail.com"}]
maintainers = [{name = "Yuan SUN", email = "sunyuan860510@gmail.com"}]
description = "Image IO APIs for wide range image formats (Camera manufacturer RAW images, jpg, png, tif, dng, bmp, yuv, nv12 ), support Exif, interact nicely with numpy array."
requires-python = ">=3.9"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}
keywords = ["imageio", "image-io", "numpy-image", "exif", "bmp", "camera raw image", "raw io", "dng io", "tif", "yuv io", "nv12 io", "canon", "nikon", "leica", "sony", "pentax", "kodak"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers"
]

[project.urls]
Homepage = "https://github.com/sygslhy/image-io"
Repository  = "https://github.com/sygslhy/image-io"
Issues = "https://github.com/sygslhy/image-io/issues"
Releases = "https://github.com/sygslhy/image-io/releases"
